--- a/app/src/main/res/layout/hhc_result_layout.xml
+++ b/app/src/main/res/layout/hhc_result_layout.xml
@@ -3,14 +3,13 @@
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
                                     android:layout_height="120dp"
-                                    app:cardBackgroundColor="@color/card_view_background"
-                                    app:cardCornerRadius="4dp"
-                                    app:cardElevation="2dp"
                                     android:layout_marginBottom="2dp"
                                     android:layout_marginLeft="12dp"
                                     android:layout_marginRight="12dp"
                                     android:layout_marginTop="12dp"
-    >
+                                    app:cardBackgroundColor="@color/card_view_background"
+                                    app:cardCornerRadius="4dp"
+                                    app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,37 +18,80 @@
         android:padding="@dimen/layout_padding_small">
 
         <TextView
-            android:id="@+id/facility_name"
+            android:id="@+id/hhc_facility_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/primary_text"
-            android:textSize="@dimen/facility_name"
             android:text="Location Name"
-            />
+            android:textStyle="bold"
+            android:textColor="@color/primary_text"
+            android:textSize="@dimen/facility_name"/>
 
-        <TextView
-            android:id="@+id/facility_address"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text"
-            android:textSize="@dimen/facility_secondary_text_size"
-            android:text="Address goes here, street name"
-            android:paddingTop="2dp" />
+            android:orientation="horizontal"
+            android:paddingTop="2dp">
+
+
+            <TextView
+                android:id="@+id/hhc_street"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="16 E 24th Street,"
+                android:textSize="@dimen/facility_secondary_text_size"/>
+
+            <TextView
+                android:id="@+id/hhc_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="6dp"
+                android:text="New York"
+                android:textSize="@dimen/facility_secondary_text_size"/>
+
+
+            <TextView
+                android:id="@+id/hhc_state"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="6dp"
+                android:text="NY"
+                android:textSize="@dimen/facility_secondary_text_size"/>
+
+            <TextView
+                android:id="@+id/hhc_zip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="3dp"
+                android:paddingLeft="6dp"
+                android:text="10020"
+                android:textSize="@dimen/facility_secondary_text_size"/>
+
+        </LinearLayout>
+
+
+        <!--<TextView-->
+        <!--android:id="@+id/facility_address"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textColor="@color/secondary_text"-->
+        <!--android:textSize="@dimen/facility_secondary_text_size"-->
+        <!--android:text="Address goes here, street name"-->
+        <!--android:paddingTop="2dp" />-->
 
         <TextView
             android:id="@+id/facility_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text"
-            android:textSize="@dimen/facility_secondary_text_size"
+            android:paddingTop="2dp"
             android:text="888-123-4567"
-            android:paddingTop="2dp" />
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/facility_secondary_text_size"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="8dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingTop="8dp">
 
             <TextView
                 android:id="@+id/facility_distance_info"
@@ -57,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:text="2 miles away"
                 android:textColor="@color/primary_text"
-                android:textSize="@dimen/facility_distance" />
+                android:textSize="@dimen/facility_distance"/>
 
 
             <ImageView
@@ -65,14 +107,14 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="12dp"
-                android:src="@drawable/ic_action_favorite" />
+                android:src="@drawable/ic_action_favorite"/>
 
             <ImageView
                 android:id="@+id/search_share_button"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="8dp"
-                android:src="@drawable/share_btn" />
+                android:src="@drawable/share_btn"/>
 
 
             <ImageView
@@ -80,16 +122,10 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="8dp"
-                android:src="@drawable/ic_action_location" />
-
+                android:src="@drawable/ic_action_location"/>
 
         </LinearLayout>
 
-
-
     </LinearLayout>
-
-
-
 
 </android.support.v7.widget.CardView>
