--- a/app/src/main/res/layout/hhc_result_layout.xml
+++ b/app/src/main/res/layout/hhc_result_layout.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
-                                    android:layout_height="120dp"
+                                    android:layout_height="140dp"
                                     android:layout_marginBottom="2dp"
                                     android:layout_marginLeft="12dp"
                                     android:layout_marginRight="12dp"
@@ -75,7 +75,7 @@
         <!--android:layout_height="wrap_content"-->
         <!--android:textColor="@color/secondary_text"-->
         <!--android:textSize="@dimen/facility_secondary_text_size"-->
-        <!--android:text="Address goes here, street name"-->
+        <!--android:text="Address goes here, street healthFacilityName"-->
         <!--android:paddingTop="2dp" />-->
 
         <TextView
