--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,9 @@
     -->
 
 <resources>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
     <dimen name="action_button_min_width">56dp</dimen>
     <dimen name="indeterminate_progress_size">32dp</dimen>
 
@@ -30,6 +33,17 @@
     <dimen name="facility_name">16sp</dimen>
     <dimen name="facility_secondary_text_size">14sp</dimen>
     <dimen name="facility_distance">12sp</dimen>
+
+    <dimen name="buttons_home_margin">4dp</dimen>
+    <dimen name="buttons_home_padding">8dp</dimen>
+    <dimen name="buttons_home_text_size">16sp</dimen>
+    <dimen name="heading_medium_text_size">24sp</dimen>
+    <dimen name="medium_text_tv_size">340dp</dimen>
+    <dimen name="fee_level_text_size">60sp</dimen>
+    <dimen name="fifty">50dp</dimen>
+    <dimen name="one_hundred">100dp</dimen>
+    <dimen name="profile">180dp</dimen>
+    <dimen name="below_toolbar">36dp</dimen>
 
 
 </resources>
