--- a/app/src/main/res/layout/facility_result_layout.xml
+++ b/app/src/main/res/layout/facility_result_layout.xml
@@ -57,38 +57,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
 
-            <TextView
-                android:id="@+id/facility_distance_info_local"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2 miles away"
-                android:textColor="@color/primary_text"
-                android:textSize="@dimen/facility_distance" />
+            <!--<TextView-->
+                <!--android:id="@+id/facility_distance_info_local"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="2 miles away"-->
+                <!--android:textColor="@color/primary_text"-->
+                <!--android:textSize="@dimen/facility_distance" />-->
 
 
             <ImageView
                 android:id="@+id/search_favorite_button_local"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="12dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginRight="12dp"
                 android:src="@drawable/ic_action_favorite" />
 
             <ImageView
                 android:id="@+id/search_share_button_local"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="8dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginRight="12dp"
                 android:src="@drawable/share_btn" />
 
 
             <ImageView
                 android:id="@+id/search_maps_button_local"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="8dp"
-                android:src="@drawable/ic_action_location" />
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="12dp"
+                android:src="@drawable/ic_action_location"/>
 
 
         </LinearLayout>
