--- a/app/src/main/res/layout/hhc_result_layout.xml
+++ b/app/src/main/res/layout/hhc_result_layout.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
-                                    android:layout_height="140dp"
+                                    android:layout_height="160dp"
                                     android:layout_marginBottom="2dp"
                                     android:layout_marginLeft="12dp"
                                     android:layout_marginRight="12dp"
@@ -22,9 +22,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Location Name"
-            android:textStyle="bold"
             android:textColor="@color/primary_text"
-            android:textSize="@dimen/facility_name"/>
+            android:textSize="@dimen/facility_name"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,13 +47,18 @@
                 android:paddingLeft="6dp"
                 android:text="New York"
                 android:textSize="@dimen/facility_secondary_text_size"/>
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="2dp">
 
             <TextView
                 android:id="@+id/hhc_state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="6dp"
                 android:text="NY"
                 android:textSize="@dimen/facility_secondary_text_size"/>
 
@@ -65,18 +70,7 @@
                 android:paddingLeft="6dp"
                 android:text="10020"
                 android:textSize="@dimen/facility_secondary_text_size"/>
-
         </LinearLayout>
-
-
-        <!--<TextView-->
-        <!--android:id="@+id/facility_address"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textColor="@color/secondary_text"-->
-        <!--android:textSize="@dimen/facility_secondary_text_size"-->
-        <!--android:text="Address goes here, street healthFacilityName"-->
-        <!--android:paddingTop="2dp" />-->
 
         <TextView
             android:id="@+id/facility_phone"
@@ -93,35 +87,35 @@
             android:orientation="horizontal"
             android:paddingTop="8dp">
 
-            <TextView
-                android:id="@+id/facility_distance_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2 miles away"
-                android:textColor="@color/primary_text"
-                android:textSize="@dimen/facility_distance"/>
+            <!--<TextView-->
+            <!--android:id="@+id/facility_distance_info"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="2 miles away"-->
+            <!--android:textColor="@color/primary_text"-->
+            <!--android:textSize="@dimen/facility_distance"/>-->
 
 
             <ImageView
                 android:id="@+id/search_favorite_button"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="12dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginRight="12dp"
                 android:src="@drawable/ic_action_favorite"/>
 
             <ImageView
                 android:id="@+id/search_share_button"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="8dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginRight="12dp"
                 android:src="@drawable/share_btn"/>
 
 
             <ImageView
                 android:id="@+id/search_maps_button"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="8dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginRight="12dp"
                 android:src="@drawable/ic_action_location"/>
 
         </LinearLayout>
