--- a/app/src/main/res/layout/facility_result_layout.xml
+++ b/app/src/main/res/layout/facility_result_layout.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="160dp"
-    app:cardBackgroundColor="@color/card_view_background"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="2dp"
-    android:layout_marginBottom="2dp"
-    android:layout_marginLeft="12dp"
-    android:layout_marginRight="12dp"
-    android:layout_marginTop="12dp"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="160dp"
+                                    android:layout_marginBottom="2dp"
+                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginRight="10dp"
+                                    android:layout_marginTop="10dp"
+                                    app:cardBackgroundColor="@color/card_view_background"
+                                    app:cardCornerRadius="4dp"
+                                    app:cardElevation="2dp"
     >
 
     <LinearLayout
@@ -22,51 +22,52 @@
             android:id="@+id/facility_name_local"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Location Name"
             android:textColor="@color/primary_text"
             android:textSize="@dimen/facility_name"
-            android:text="Location Name"
+            android:textStyle="bold"
             />
 
         <TextView
             android:id="@+id/facility_address_local"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text"
-            android:textSize="@dimen/facility_secondary_text_size"
+            android:paddingTop="2dp"
             android:text="Address goes here, street healthFacilityName"
-            android:paddingTop="2dp" />
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/facility_secondary_text_size"/>
 
         <TextView
             android:id="@+id/facility_phone_local"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text"
-            android:textSize="@dimen/facility_secondary_text_size"
+            android:paddingTop="2dp"
             android:text="888-123-4567"
-            android:paddingTop="2dp" />
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/facility_secondary_text_size"/>
 
         <TextView
             android:id="@+id/facility_website_local"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text"
-            android:textSize="@dimen/facility_secondary_text_size"
+            android:paddingTop="2dp"
             android:text="www.healthFacilityWebsite.com"
-            android:paddingTop="2dp" />
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/facility_secondary_text_size"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
 
             <!--<TextView-->
-                <!--android:id="@+id/facility_distance_info_local"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="2 miles away"-->
-                <!--android:textColor="@color/primary_text"-->
-                <!--android:textSize="@dimen/facility_distance" />-->
+            <!--android:id="@+id/facility_distance_info_local"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="2 miles away"-->
+            <!--android:textColor="@color/primary_text"-->
+            <!--android:textSize="@dimen/facility_distance" />-->
 
 
             <ImageView
@@ -74,31 +75,28 @@
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:layout_marginRight="12dp"
-                android:src="@drawable/ic_action_favorite" />
+                android:src="@drawable/ic_action_favorite"/>
 
             <ImageView
                 android:id="@+id/search_share_button_local"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:layout_marginRight="12dp"
-                android:src="@drawable/share_btn" />
+                android:src="@drawable/share_btn"/>
 
 
-            <ImageView
-                android:id="@+id/search_maps_button_local"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginRight="12dp"
-                android:src="@drawable/ic_action_location"/>
+            <!--<ImageView-->
+            <!--android:id="@+id/search_maps_button_local"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginRight="12dp"-->
+            <!--android:src="@drawable/ic_action_location"/>-->
 
 
         </LinearLayout>
 
 
-
     </LinearLayout>
-
-
 
 
 </android.support.v7.widget.CardView>
