--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
-                                    android:layout_height="150dp"
+                                    android:layout_height="160dp"
                                     app:cardBackgroundColor="@color/card_view_background"
                                     app:cardCornerRadius="4dp"
                                     app:cardElevation="2dp"
@@ -25,7 +25,7 @@
             android:textColor="@color/primary_text"
             android:textSize="@dimen/facility_name"
             android:text="Location Name"
-            />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/fave_facility_address"
@@ -85,12 +85,12 @@
                 android:src="@drawable/share_btn" />
 
 
-            <ImageView
-                android:id="@+id/fave_maps_button"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
-                android:layout_marginRight="12dp"
-                android:src="@drawable/ic_action_location" />
+            <!--<ImageView-->
+                <!--android:id="@+id/fave_maps_button"-->
+                <!--android:layout_width="28dp"-->
+                <!--android:layout_height="28dp"-->
+                <!--android:layout_marginRight="12dp"-->
+                <!--android:src="@drawable/ic_action_location" />-->
 
 
         </LinearLayout>
