--- a/app/src/main/res/layout/fragment_find_service.xml
+++ b/app/src/main/res/layout/fragment_find_service.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
         android:layout_marginBottom="48dp"
         android:background="@color/cerulean_blue"
         android:gravity="bottom"
@@ -22,7 +22,7 @@
             android:paddingBottom="4dp"
             android:text="Hello,"
             android:textColor="@color/white"
-            android:textSize="22sp" />
+            android:textSize="22sp"/>
 
         <TextView
             android:id="@+id/user_question"
@@ -31,7 +31,7 @@
             android:layout_marginLeft="18dp"
             android:text="@string/greeting_txt"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
 
     </LinearLayout>
 
@@ -44,58 +44,58 @@
         android:entries="@array/medical_services"></Spinner>
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_input_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/enter_location">
+    <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:id="@+id/text_input_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="@string/enter_location">-->
 
-        <EditText
-            android:id="@+id/location_input"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:background="@color/sky_blue"
-            android:ems="10"
-            android:inputType="textPostalAddress" />
+        <!--<EditText-->
+            <!--android:id="@+id/location_input"-->
+            <!--android:layout_width="300dp"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:background="@color/sky_blue"-->
+            <!--android:ems="10"-->
+            <!--android:inputType="textPostalAddress" />-->
 
-    </android.support.design.widget.TextInputLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/use_current_location"
-            android:textSize="13sp" />
+    <!--</android.support.design.widget.TextInputLayout>-->
 
 
-        <ImageView
-            android:id="@+id/current_location_btn"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/ic_use_curr_location"
-            />
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:orientation="horizontal">-->
 
-    </LinearLayout>
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:text="@string/use_current_location"-->
+            <!--android:textSize="13sp" />-->
+
+
+        <!--<ImageView-->
+            <!--android:id="@+id/current_location_btn"-->
+            <!--android:layout_width="25dp"-->
+            <!--android:layout_height="25dp"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:src="@drawable/ic_use_curr_location"-->
+            <!--/>-->
+
+    <!--</LinearLayout>-->
 
 
     <Button
         android:id="@+id/find_service_btn"
         android:layout_width="180dp"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/corner_rounding_blue"
         android:text="@string/find_service_btn"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"/>
 
 
 </LinearLayout>
